@@ -24,45 +24,41 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 
 import org.bukkit.Bukkit;
 import org.bukkit.ChatColor;
 
-import me.iiSnipez.CombatLog.CombatLog;;
-
 public class Updater {
 
-	private CombatLog plugin;
+	private final CombatLog plugin;
 
 	public Updater(CombatLog plugin) {
 		this.plugin = plugin;
 	}
 
-	private String key = "key=98BE0FE67F88AB82B4C197FAF1DC3B69206EFDCC4D3B80FC83A00037510B99B4&resource=";
-	private String id = "36192";
+	private static final String KEY = "key=98BE0FE67F88AB82B4C197FAF1DC3B69206EFDCC4D3B80FC83A00037510B99B4&resource=";
+	private static final String ID = "36192";
 
 	public void updateCheck() {
 		try {
-			HttpURLConnection connection = (HttpURLConnection) new URL("http://www.spigotmc.org/api/general.php")
-					.openConnection();
+			HttpURLConnection connection = (HttpURLConnection) URI.create("http://www.spigotmc.org/api/general.php")
+					.toURL().openConnection();
 			connection.setDoOutput(true);
 			connection.setRequestMethod("POST");
-			connection.getOutputStream().write((key + id).getBytes("UTF-8"));
+			connection.getOutputStream().write((KEY + ID).getBytes("UTF-8"));
 			String version = new BufferedReader(new InputStreamReader(connection.getInputStream())).readLine();
-			if (!version.equals(plugin.getDescription().getVersion())) {
+			if (version != null && !version.equals(plugin.getPluginMeta().getVersion())) {
 				Bukkit.getServer().getConsoleSender()
 						.sendMessage(ChatColor.GREEN + "[CombatLog] Update available! Current: " + ChatColor.GOLD
-								+ plugin.getDescription().getVersion() + ChatColor.GREEN + " New: " + ChatColor.GOLD
+								+ plugin.getPluginMeta().getVersion() + ChatColor.GREEN + " New: " + ChatColor.GOLD
 								+ version);
 				plugin.updateAvailable = true;
 			}
 			connection.disconnect();
 		} catch (IOException e) {
 			Bukkit.getServer().getConsoleSender()
-					.sendMessage("[DeathReview] Failed to connect to spigotmc.org! Update check did not work.");
-			e.printStackTrace();
+					.sendMessage("[CombatLog] Failed to connect to spigotmc.org! Update check did not work.");
 		}
 	}
-
 }
